--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Vice Versa</h1>
+    <p>This is new page</p>
     <form>
         <textarea cols="50" rows="10" name="usertext"></textarea>
         <br><br>
