--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Vice Versa</h1>
     <p>This is new page</p>
-    <form>
+    <form action="{% url 'reverse' %}">
         <textarea cols="50" rows="10" name="usertext"></textarea>
         <br><br>
         <input type="submit" value="Reverse!">
