--- a/templates/reverse.html
+++ b/templates/reverse.html
@@ -5,7 +5,7 @@
     <title>Reversed</title>
 </head>
 <body>
-    <h1>Original Text</h1>
+    <h1>Original text has {{number_of_words}} words</h1>
     {{usertext}}
     <h1>Reversed Text</h1>
     {{reversedtext}}
